--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -12,6 +12,8 @@ django-mathfilters==1.0.0
 django-timezone-field==6.1.0
 djangorestframework==3.12.4
 djangorestframework-datatables==0.6.0
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.3
 dotted-dict==1.1.3
 drf-yasg==1.21.3
 gunicorn==22.0.0
